--- a/3.入金相关接口.md
+++ b/3.入金相关接口.md
@@ -270,7 +270,6 @@
 |参数名|必选|类型|说明|
 |:----    |:---|:----- |-----   |
 |amount|是|Double|入金金额（购买USDT数量）|
-|currency|是|string|入金币种 如:USDT(ERC20)|
 |exchangeRate|是|Double|目前固定是 1.0 ，无实际意义|
 |poundage|是|Double|手续费|
 |merchantNo|是|string|商户的商户号(UID)|
@@ -278,7 +277,12 @@
 |orderNo|是|string|Bitake交易流水号|
 |sign|是|sting|签名|
 |timestamp |是|string | 10位时间戳  |
+|currency|否|string|入金币种 如:USDT(ERC20)|
+|fiatCurrency |否|string | 入金结算的法币类型 例：CNY  |
+|fiatRate |否|Double | 入金币种对入金结算法币的汇率 例：6.43  |
+|fiatAmount |否|Double | 入金结算法币的金额 例：1000.00  |
 
+- 参数加密顺序：amount&exchangeRate&poundage&merchantNo&merchantOrderNo&orderNo&timestamp
 - 通过商户后台配置密钥加密。 商户请严格按照签名规则验证数据，保证数据的安全性和合法性。
 
 **接收返回值格式:**
