--- a/3.入金相关接口.md
+++ b/3.入金相关接口.md
@@ -281,7 +281,7 @@
 |fiatCurrency |否|string | 入金结算的法币类型 例：CNY  |
 |fiatRate |否|Double | 入金币种对入金结算法币的汇率 例：6.43  |
 |fiatAmount |否|Double | 入金结算法币的金额 例：1000.00  |
-
+|payerName |否|string | 付款人姓名  |
 - 参数加密顺序：amount&exchangeRate&poundage&merchantNo&merchantOrderNo&orderNo&timestamp
 - 通过商户后台配置密钥加密。 商户请严格按照签名规则验证数据，保证数据的安全性和合法性。
 
